# 3d-ai-pipeline

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLAUDE_projekt_v2.md  ClaudeV4.md  LICENSE  Makefile  README.md  api.py  app.py  get_bambu_token.py  main.py  model.step  pyproject.toml  train_dspy.py
_archive/agents/: blueprint_assembler.py  feature_assigner.py  feature_tagger.py  part_position_assigner.py  planner.py
_archive/nodes/: dispatcher_node.py
_archive/prompts/: prompt_part_position_assigner.py  prompt_position_assigner.py
_archive/rag/: feature_assigner_rag.py  feature_tagger_rag.py  planner_rag.py  position_assigner_rag.py
config/: config.yaml
data/dspy_optimized/: circular_classifier_demo_pool.json  circular_classifier_optimized.json  edge_feature_classifier_demo_pool.json  edge_feature_classifier_optimized.json  grid_classifier_demo_pool.json  grid_classifier_optimized.json  hole_classifier_demo_pool.json  hole_classifier_optimized.json  inventar_optimized.json  linear_classifier_demo_pool.json  linear_classifier_optimized.json  normalizer_optimized.json  pattern_classifier_optimized.json  platzierer_alignment_optimized.json  platzierer_anchor_optimized.json  platzierer_frame_optimized.json  platzierer_offset_optimized.json  pocket_classifier_demo_pool.json  pocket_classifier_optimized.json  slot_classifier_demo_pool.json  slot_classifier_optimized.json
data/dspy_training/: SONNET_GOLDEN_PLAN.md  SONNET_PLAN.md  agent_contracts.py  example_matrix.md  examples.json  feature_definierer_traces.py  generate_examples.py  klassifizierer_traces.py  labeler_platzierer_traces.json  labeler_platzierer_traces.py  normalizer_traces.py  reference_traces.json  reference_traces.py  sonnet_traces.py  sonnet_traces_batch1.json  variation_traces.py
data/prompts/: CLAUDE_prompts_v2.md  agent_config.py  function_decomposer.py  prompt_aktions_klassifizierer.py  prompt_assembly.py  prompt_blueprint_architect.py  prompt_classifier_anchor.py  prompt_classifier_circular.py  prompt_classifier_edge_feature.py  prompt_classifier_grid.py  prompt_classifier_hole.py  prompt_classifier_linear.py  prompt_classifier_pattern.py  prompt_classifier_pocket.py  prompt_classifier_slot.py  prompt_code_fixer.py  prompt_code_review.py  prompt_coder.py  prompt_feature_assigner.py  prompt_feature_position_assigner.py  prompt_feature_tagger.py  prompt_interpreter.py  prompt_inventar.py  prompt_modification_interpreter.py  prompt_normalizer.py  prompt_plan_validator.py  prompt_planner.py  prompt_pocket_child_placer.py  prompt_position_alignment.py  prompt_position_anchor.py  prompt_position_extractor.py  prompt_position_frame.py  prompt_position_normalizer.py  prompt_position_offset.py  prompt_punctuation.py  prompt_teil_definierer.py  prompt_text_splitter.py  prompt_validator.py  prompt_visioner.py
docs/: golden_coverage_audit_2026-05-12.md
docs/conventions/: 10_masseintragung_din406.md  11_coverage_matrix.md  20_bohrung_din.md  21_nut_slot_din.md  22_tasche_din.md  24_pattern_din.md  25_plate_din.md  26_edge_features_din.md  90_user_wording_examples.md  98_engineering_plan.md  99_normen_audit.md  README.md
docs/decisions/: 0001-pocket-child-placer-mapping-only.md  0002-plan-validator-pocket-floor-filter.md  0003-inventar-feature-definierer-pro-aktion.md  0005-regressions-baseline-feature-matrix.md  (+13 more)
scripts/: archive_runs.py  build_classifier_demo_pools.py  build_goldens.py  run_real_goldens.py  save_golden.py
tests/: test_app.py  test_config.py  test_dspy_training_variations.py
(+483 files in other folders)
