[project]
name = "3d-ai-pipeline-v2"
version = "0.1.0"
description = "Text-to-CAD pipeline with local LLMs and CadQuery — multi-agent architecture, deterministic geometry tools, semantic blueprint."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "cadquery>=2.7.0",
    "chromadb>=1.5.2",
    "fastapi>=0.135.1",
    "faster-whisper>=1.2.1",
    "gradio>=6.9.0",
    "langchain-core>=1.2.17",
    "langgraph>=1.0.10",
    "plotly>=6.6.0",
    "psutil>=7.2.2",
    "pytest>=9.0.2",
    "sentence-transformers>=5.2.3",
    "structlog>=25.5.0",
    "trimesh>=4.11.3",
    "uvicorn>=0.41.0",
]
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "slow: integration tests that need Ollama and real models",
]
